[tool.poetry]
name = "renovate_poetry_repro_star"
version = "0.1.0"
description = "Renovate Poetry star support reproducer"
authors = ["Yury V. Zaytsev <yury@shurup.com>"]

[tool.poetry.dependencies]
django = "*"

python = "^3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
